force-app/infrastructure/apex-extensions/main/logger/objects/fflib_LogEvent__e/fflib_LogEvent__e.object-meta.xml
<CustomObject>
    <description>FFLIB Logger Events</description>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>