force-app/infrastructure/apex-extensions/main/logger/objects/fflib_LogEvent__e/fields/ExecutionContext__c.field-meta.xml
<CustomField>
    <fullName>ExecutionContext__c</fullName>
    <label>Execution Context</label>
    <length>80</length>
    <type>Text</type>
</CustomField>