force-app/infrastructure/apex-extensions/main/logger/objects/fflib_LogEvent__e/fields/LogLevel__c.field-meta.xml
<CustomField>
    <fullName>LogLevel__c</fullName>
    <label>Log Level</label>
    <length>5</length>
    <type>Text</type>
</CustomField>